// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tarjetaDatos > mantiene su forma 1`] = `
"
      <div class="card">
        <p class="card-title">Datos de tu registro</p>
        <div class="datos-grid">
          <div class="dato-item full">
            <span class="dato-label">Nombre completo</span>
            <span class="dato-valor">Ana Victoria de la Rosa García</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">ID de Participante</span>
            <span class="dato-valor id-participante">ENC-042</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Perfil</span>
            <span class="dato-valor"><span class="perfil-badge" data-perfil="estudiante">Estudiante</span></span>
          </div>
          <div class="dato-item full">
            <span class="dato-label">Taller asignado</span>
            <span class="dato-valor">Futurología aplicada al diseño</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Institución</span>
            <span class="dato-valor">UAA · Universidad Autónoma de Aguascalientes</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Fecha de registro</span>
            <span class="dato-valor dato-fecha">sábado, 1 de agosto de 2026</span>
          </div>
        </div>
      </div>"
`;

exports[`vistas completas > la de comprobante en revisión mantiene su forma 1`] = `
"
    
      <div class="estado-banner revision">
        <div class="estado-indicador"></div>
        <div class="estado-info">
          <div class="estado-titulo">En Revisión</div>
          <div class="estado-desc">Recibimos tu comprobante. Nuestro equipo lo está verificando.</div>
        </div>
      </div>
    
    
      <div class="card">
        <p class="card-title">Datos de tu registro</p>
        <div class="datos-grid">
          <div class="dato-item full">
            <span class="dato-label">Nombre completo</span>
            <span class="dato-valor">Ana Victoria de la Rosa García</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">ID de Participante</span>
            <span class="dato-valor id-participante">ENC-042</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Perfil</span>
            <span class="dato-valor"><span class="perfil-badge" data-perfil="estudiante">Estudiante</span></span>
          </div>
          <div class="dato-item full">
            <span class="dato-label">Taller asignado</span>
            <span class="dato-valor">Futurología aplicada al diseño</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Institución</span>
            <span class="dato-valor">UAA · Universidad Autónoma de Aguascalientes</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Fecha de registro</span>
            <span class="dato-valor dato-fecha">sábado, 1 de agosto de 2026</span>
          </div>
        </div>
      </div>
    
      <div class="card upload-section">
        <p class="card-title">Comprobante de pago</p>
        <div class="upload-ya-enviado upload-ya-enviado-aviso">
          <strong>Comprobante recibido exitosamente.</strong><br><br>
          Nuestro equipo está verificando tu pago. Te notificaremos por correo cuando sea aprobado.
        </div>
      </div>"
`;

exports[`vistas completas > la de comprobante pendiente mantiene su forma 1`] = `
"
    
      <div class="estado-banner pendiente">
        <div class="estado-indicador"></div>
        <div class="estado-info">
          <div class="estado-titulo">Pendiente de Comprobante</div>
          <div class="estado-desc">Debes subir tu comprobante de pago para asegurar tu lugar.</div>
        </div>
      </div>
    
      <div class="countdown-wrapper">
        <div class="countdown-label">Tiempo restante para subir tu comprobante</div>
        <div id="cd-inner"></div>
      </div>
    
      <div class="card">
        <p class="card-title">Datos de tu registro</p>
        <div class="datos-grid">
          <div class="dato-item full">
            <span class="dato-label">Nombre completo</span>
            <span class="dato-valor">Ana Victoria de la Rosa García</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">ID de Participante</span>
            <span class="dato-valor id-participante">ENC-042</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Perfil</span>
            <span class="dato-valor"><span class="perfil-badge" data-perfil="estudiante">Estudiante</span></span>
          </div>
          <div class="dato-item full">
            <span class="dato-label">Taller asignado</span>
            <span class="dato-valor">Futurología aplicada al diseño</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Institución</span>
            <span class="dato-valor">UAA · Universidad Autónoma de Aguascalientes</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Fecha de registro</span>
            <span class="dato-valor dato-fecha">sábado, 1 de agosto de 2026</span>
          </div>
        </div>
      </div>
    
      <div class="card upload-section">
        <p class="card-title">Comprobante de pago</p>
        <div class="upload-area" id="upload-area" role="button" tabindex="0" aria-label="Seleccionar o arrastrar archivo PDF de comprobante de pago">
          <input type="file" id="comp-input" accept="application/pdf" class="oculto" aria-hidden="true" />
          <svg class="upload-icono" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true">
            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m6.75 12-3-3m0 0-3 3m3-3v6m-1.5-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
          </svg>
          <p class="upload-text">Arrastra tu PDF aquí o haz clic para seleccionar</p>
          <p class="upload-hint">Solo archivos PDF &bull; Máximo 5 MB</p>
        </div>
        <div id="file-info" class="oculto"></div>
        <button class="btn btn-primary btn-full" id="btn-subir" disabled aria-label="Enviar comprobante de pago en formato PDF">Subir comprobante</button>
        <p class="upload-nota">
          Solo archivos PDF. Si tienes algún problema para subirlo, contáctanos.
        </p>
      </div>"
`;

exports[`vistas completas > la de pago aprobado mantiene su forma 1`] = `
"
    <div class="dashboard-layout">
      <div class="dashboard-left">
        
      <div class="estado-banner aprobado">
        <div class="estado-indicador"></div>
        <div class="estado-info">
          <div class="estado-titulo">Pago Aprobado</div>
          <div class="estado-desc">Tu lugar está confirmado. Puedes descargar tu QR e imprimir tu gafete.</div>
        </div>
      </div>
        
      <div class="card">
        <p class="card-title">Datos de tu registro</p>
        <div class="datos-grid">
          <div class="dato-item full">
            <span class="dato-label">Nombre completo</span>
            <span class="dato-valor">Ana Victoria de la Rosa García</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">ID de Participante</span>
            <span class="dato-valor id-participante">ENC-042</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Perfil</span>
            <span class="dato-valor"><span class="perfil-badge" data-perfil="estudiante">Estudiante</span></span>
          </div>
          <div class="dato-item full">
            <span class="dato-label">Taller asignado</span>
            <span class="dato-valor">Futurología aplicada al diseño</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Institución</span>
            <span class="dato-valor">UAA · Universidad Autónoma de Aguascalientes</span>
          </div>
          <div class="dato-item">
            <span class="dato-label">Fecha de registro</span>
            <span class="dato-valor dato-fecha">sábado, 1 de agosto de 2026</span>
          </div>
        </div>
      </div>
        
      <div class="card card-separada">
        <p class="card-title">Código QR de acceso</p>
        <div class="qr-wrapper">
          <div class="qr-img-box">
            <img id="qr-img" src="[QR]" alt="QR ENC-042" width="240" height="240" />
          </div>
          <div>
            <div class="qr-id-label">ID de participante</div>
            <div class="qr-id-value">ENC-042</div>
          </div>
          <a class="btn btn-outline" href="[QR]" download="QR_ENC-042.png" aria-label="Descargar código QR en alta resolución">
            Descargar QR
          </a>
        </div>
      </div>
      </div>
      <div class="dashboard-right">
        
      <div class="card gafete-print-section gafete-sticky">
        <p class="card-title">Tu gafete virtual</p>

        <div class="gafete-preview-wrapper">
          <div class="gafete-corte">
            <div class="gafete" data-perfil="estudiante">
              <div class="gafete-lanyard"><div class="gafete-hole"></div></div>
              <div class="gafete-top">
                <img class="gafete-logo" src="/logo_futurologia_encuadre.webp" alt="Encuadre 2026" />
                <div class="gafete-evento">36 FTD &middot; Futurología &middot; Encuadre</div>
                <div class="gafete-fecha">29, 30 y 31 de octubre de 2026 &middot; Aguascalientes</div>
              </div>
              <div class="gafete-body">
                <div class="gafete-nombre">Ana Victoria de la Rosa García</div>
                <span class="gafete-perfil-badge">Estudiante</span>
                <div class="gafete-taller-label">Taller</div>
                <div class="gafete-taller-nombre">Futurología aplicada al diseño</div>
                <div class="gafete-footer">
                  <div class="gafete-qr-small">
                    <img src="[QR]" alt="QR ENC-042" width="100" height="100" />
                  </div>
                  <div>
                    <div class="gafete-id-label">ID de Participante</div>
                    <div class="gafete-id-value">ENC-042</div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>

        <button class="btn btn-primary btn-full btn-imprimir" id="btn-imprimir" type="button" aria-label="Imprimir tu gafete virtual">
          Imprimir gafete
        </button>
      </div>
      </div>
    </div>"
`;
